--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     Hier komt mijn eerste tekst
 
-    <a href="binairstelsel.html">Home</a> <!--link terug naar de homepage-->
+    <a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar de homepage-->
   
   </body>
 </html>
