--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -2,12 +2,14 @@
 <html> <!--dit is het html-element-->
   <head>
     <title>Binair stelsel</title>
-    <meta> charset=''utf-8''>
+    <meta charset="utf-8">
   </head>
   <body>
     Uitleg binaire stelsel
 
 <a href="index.html">Home</a> <!--link terug naar de homepage-->
+
+<img scr="Binair plaatje.jpg" alt="Binair stelsel plaatje"
 
 </body>
 </html>
