--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <html> <!--dit is het html-element-->
   <head>
     <title>Het eerste begin</title>
-    <meta> charset="utf-8">
+    <meta charset="utf-8">
   </head>
   <body>
     Hier komt mijn eerste tekst
 
     <a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar de homepage-->
+
   
   </body>
 </html>
