--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
   </head>
   <body>
-    Uitleg binaire stelsel
+    Uitleg binaire stelsel: Het binair stelsel is 
 
 <a href="index.html">Home</a> <!--link terug naar de homepage-->
 
