--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
   </head>
   <body>
-    Uitleg binaire stelsel: Het binair stelsel is 
+    Uitleg binaire stelsel 
 
 <a href="index.html">Home</a> <!--link terug naar de homepage-->
 
-<img scr="Binair plaatje.jpg" alt="Binair stelsel plaatje"
+<img scr="Binair plaatje.jpg">
 
 </body>
 </html>
