--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta charset="utf-8">
   </head>
   <body>
-    Hier komt mijn eerste tekst
+    Goedemorgen dames en heertjes. Welkom op deze website. Vandaag gaan wij jullie iets vertellen over het binair stelsel en kleurmodellen.
+    Ik vind het wel bijzonder dat jij op deze site terecht bent gekomen, want waarom zou je in je vrije tijd deze website bekijken.
+    Als je nog steeds geinterseert bent veel plezier dan met het bezoeken van de website. (klik op een van de links om daarvan informatie te krijgen)
 
     <a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar de homepage-->
 
