--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -5,12 +5,14 @@
     <meta charset="utf-8">
   </head>
   <body>
-    Uitleg binaire stelsel:
+    <h1>Uitleg binaire stelsel</h1>
     
-  Geschiedenis: 
-  De egyptenaren waren de eerste die het binair stelsel gebruikte. Ze gebruikte toen de machten van 2. In de 3e eeuw voor christus beschreef de Indiaanse wiskundige Pingala een binair stelsel. In 1703 publiceerde Gottfried Wilhelm Lebibniz uitleg over binair rekenen.
-  In 1937 knutselde George Stibitz aan zijn keukentafel zijn eerste binaire rekenmachine. In 1947 noemde John Turkey een binair cijfer een bit (binairy digit).
-
+  <article>
+    <h2>Geschiedenis</h2> 
+    <p>De egyptenaren waren de eerste die het binair stelsel gebruikte. Ze gebruikte toen de machten van 2. In de 3e eeuw voor christus beschreef de Indiaanse wiskundige Pingala een binair stelsel. In 1703 publiceerde Gottfried Wilhelm Lebibniz uitleg over binair rekenen.
+      In 1937 knutselde George Stibitz aan zijn keukentafel zijn eerste binaire rekenmachine. In 1947 noemde John Turkey een binair cijfer een bit (binairy digit).</p>
+  </article>
+    
 <a href="index.html">Home</a> <!--link terug naar de homepage-->
 
 <img scr="Binair plaatje.jpg">
