--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     Ik vind het wel bijzonder dat jij op deze site terecht bent gekomen, want waarom zou je in je vrije tijd deze website bekijken.
     Als je nog steeds geinterseert bent veel plezier dan met het bezoeken van de website. (klik op een van de links om daarvan informatie te krijgen)
 
-    <a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar de homepage-->
+   <li><a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar de homepage--></li> 
 
   
   </body>
