--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -13,7 +13,8 @@
       In 1937 knutselde George Stibitz aan zijn keukentafel zijn eerste binaire rekenmachine. In 1947 noemde John Turkey een binair cijfer een bit (binairy digit).</p>
   </article>
     
-<a href="index.html">Home</a> <!--link terug naar de homepage-->
+<li><a href="index.html">Home</a> <!--link terug naar de homepage--></li>
+<li><a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar de homepage--></li> 
 
 <img scr="Binair plaatje.jpg">
 
