--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     Als je nog steeds geinterseert bent veel plezier dan met het bezoeken van de website. (klik op een van de links om daarvan informatie te krijgen)
 
    <li><a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar de homepage--></li> 
-
+   <li><a href="index.html">Home</a> <!--link terug naar de homepage--></li>
   
   </body>
 </html>
