--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -16,7 +16,7 @@
 <li><a href="index.html">Home</a> <!--link terug naar de homepage--></li>
 <li><a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar de homepage--></li> 
 
-<img scr="Binair plaatje.jpg">
+<img src="Binair plaatje.jpg">
 
 </body>
 </html>
