--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -11,7 +11,11 @@
     <h2>Geschiedenis</h2> 
     <p>De egyptenaren waren de eerste die het binair stelsel gebruikte. Ze gebruikte toen de machten van 2. In de 3e eeuw voor christus beschreef de Indiaanse wiskundige Pingala een binair stelsel. In 1703 publiceerde Gottfried Wilhelm Lebibniz uitleg over binair rekenen.
       In 1937 knutselde George Stibitz aan zijn keukentafel zijn eerste binaire rekenmachine. In 1947 noemde John Turkey een binair cijfer een bit (binairy digit).</p>
-  </article>
+  
+    <h2>Binaire code</h2>
+    <p>Een binaire code wordt gebruikt om tekst, instructies aan de computer of andere gegevens te symboliseren met behulp van slechts twee tekens. Meestal worden hiervoor de cijfers "0" en "1" gebruikt, waardoor het binaire talstelsel gebruikt kan worden om met de binaire code te "rekenen". Dan wordt de binaire code opgevat als een binair getal. De omzetting van tekst, een computerinstructie of andere gegevens naar een binaire code leidt tot een reeks binaire tekens. Soms kiest men er daarbij voor met reeksen van vaste lengte te werken.
+     Dan wordt letter, cijfer of ander teken weergegeven door een reeks van gelijke lengte</p>
+    </article>
     
 <li><a href="index.html">Home</a> <!--link terug naar de homepage--></li>
 <li><a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar de homepage--></li> 
