--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -15,7 +15,7 @@
     <h2>Binaire code</h2>
     <p>Een binaire code wordt gebruikt om tekst, instructies aan de computer of andere gegevens te symboliseren met behulp van slechts twee tekens. Meestal worden hiervoor de cijfers 0 en 1 gebruikt, waardoor het binaire talstelsel gebruikt kan worden om met de binaire code te "rekenen". Dan wordt de binaire code opgevat als een binair getal. De omzetting van tekst, een computerinstructie of andere gegevens naar een binaire code leidt tot een reeks binaire tekens. 
       Soms kiest men er daarbij voor met reeksen van vaste lengte te werken.
-     Dan wordt letter, cijfer of ander teken weergegeven door een reeks van gelijke lengte</p>
+     Dan wordt letter, cijfer of ander teken weergegeven door een reeks van gelijke lengte waarbij steeds 7 bits worden gebruikt om een teken te representeren.</p>
     </article>
     
 <li><a href="index.html">Home</a> <!--link terug naar de homepage--></li>
