--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -7,6 +7,10 @@
   <body>
     <h1>Uitleg binaire stelsel</h1>
     
+    
+    <li><a href="index.html">Home</a> <!--link terug naar de homepage--></li>
+    <li><a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar de homepage--></li> 
+
   <article>
     <h2>Geschiedenis</h2> 
     <p>De egyptenaren waren de eerste die het binair stelsel gebruikte. Ze gebruikte toen de machten van 2. In de 3e eeuw voor christus beschreef de Indiaanse wiskundige Pingala een binair stelsel. In 1703 publiceerde Gottfried Wilhelm Lebibniz uitleg over binair rekenen.
