--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -19,8 +19,10 @@
      Dan wordt letter, cijfer of ander teken weergegeven door een reeks van gelijke lengte waarbij steeds 7 bits worden gebruikt om een teken te representeren.</p>
     </article>
     
-    <li><a href="index.html">Home</a> <!--link terug naar de homepage--></li>
-    <li><a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar de homepage--></li> 
+<li><a href="index.html">Home</a> <!--link terug naar de homepage--></li>
+<li><a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar de homepage--></li> 
+<li><a href="kleurmodellen.html">Kleumodellen</a> <!--link terug naar de homepage--></li>
+    
 
 
 <img src="Binair plaatje.jpg">
