--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html> <!--dit is de homepage van mijn site-->
+<html> <!--dit is het html-element-->
+<head>Kleumodellen</head>
+<meta charset="utf-8">
+  </head>
+  <body>
+    <h1>Uitleg Kleurmodellen</h1>
 
+    <article>
+
+    </article>
+
+<li><a href="index.html">Home</a> <!--link terug naar de homepage--></li>
+<li><a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar de homepage--></li> 
+<li><a href="kleurmodellen.html">Kleumodellen</a> <!--link terug naar de homepage--></li>
+  </body>
+  </html>
