--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -12,6 +12,6 @@
 
 <li><a href="index.html">Home</a> <!--link terug naar de homepage--></li>
 <li><a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar de homepage--></li> 
-<li><a href="kleurmodellen.html">Kleumodellen</a> <!--link terug naar de homepage--></li>
+<li><a href="kleurmodellen.html">Kleurmodellen</a> <!--link terug naar de homepage--></li>
   </body>
   </html>
