--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> <!--dit is de homepage van mijn site-->
 <html> <!--dit is het html-element-->
-<head>Kleumodellen</head>
+<head>Kleurmodellen</head>
 <meta charset="utf-8">
   </head>
   <body>
