--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html> <!--dit is de homepage van mijn site-->
 <html> <!--dit is het html-element-->
-<head>Kleurmodellen</head>
+<head>
+    <title>Kleurmodellen</title>
 <meta charset="utf-8">
   </head>
   <body>
