--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -9,7 +9,8 @@
 
     <article>
         <h2>RGB-kleurmodellen</h2>
-
+<p>Het RGB-kleursysteem is een kleurcodering, een manier om een kleur uit te drukken met behulp van een combinatie van de drie primaire kleuren Rood-Groen-Blauw, uitgaande van additieve kleurmenging.
+   De hoeveelheid van elke primaire kleur die benodigd is om de mengkleur te verkrijgen, wordt uitgedrukt in een getal dat meestal uit 8 bits bestaat en kan variëren tussen 0 en 255. </p>
     </article>
 
 <li><a href="index.html">Home</a> <!--link terug naar de homepage--></li>
