--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -17,5 +17,6 @@
 <li><a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar de homepage--></li> 
 <li><a href="kleurmodellen.html">Kleurmodellen</a> <!--link terug naar de homepage--></li>
   </ul>
+  <img scr="kleurmodellenplaatje.png"
 </body>
   </html>
