--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -2,8 +2,9 @@
 <html> <!--dit is het html-element-->
 <head>
     <title>Kleurmodellen</title>
-<meta charset="utf-8">
-  </head>
+    <link rel="stylesheet" href="opmaak.css">
+    <meta charset="utf-8">
+</head>
   <body>
     <h1>Uitleg Kleurmodellen</h1>
 
@@ -17,6 +18,6 @@
 <li><a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar de homepage--></li> 
 <li><a href="kleurmodellen.html">Kleurmodellen</a> <!--link terug naar de homepage--></li>
   </ul>
-  <img scr="kleurmodellenplaatje.png"
+  <img src="kleurmodellenplaatje.png">
 </body>
   </html>
