--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
       <li><a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar de homepage--></li> 
       <li><a href="kleurmodellen.html">Kleurmodellen</a> <!--link terug naar de homepage--></li>
   </ul>
-    Goedemorgen dames en heertjes. Welkom op deze website. Vandaag gaan wij jullie iets vertellen over het binair stelsel en kleurmodellen.
+<article>
+  <h2>Inleiding</h2>
+    <p>Goedemorgen dames en heertjes. Welkom op deze website. Vandaag gaan wij jullie iets vertellen over het binair stelsel en kleurmodellen.
     Ik vind het wel bijzonder dat jij op deze site terecht bent gekomen, want waarom zou je in je vrije tijd deze website bekijken.
-    Als je nog steeds geinterseert bent veel plezier dan met het bezoeken van de website. (klik op een van de links om daarvan informatie te krijgen)
-
+    Als je nog steeds geinterseert bent veel plezier dan met het bezoeken van de website. (klik op een van de links om daarvan informatie te krijgen)</p>
+</article>
   </body>
 </html>
