--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -25,8 +25,11 @@
      Dan wordt letter, cijfer of ander teken weergegeven door een reeks van gelijke lengte waarbij steeds 7 bits worden gebruikt om een teken te representeren.</p>
     </article>
 
+  <a href="https://games.penjee.com/binary-bonanza/">
+<img scr="BinaryBononza.PNG" alt="Speel BB" style="width:200px;height:20"
+  </a>
 
-<img src="Binair plaatje.jpg">
+  <img src="Binair plaatje.jpg">
 
 </body>
 </html>
