--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -26,7 +26,7 @@
     </article>
 
   <a href="https://games.penjee.com/binary-bonanza/">
-<img scr="BinaryBononza.PNG" alt="Speel BB" style="width:200px;height:20"
+<img src="BinaryBononza.PNG" alt="Speel BB" style="width:200px;height:20"
   </a>
 
   <img src="Binair plaatje.jpg">
