--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -18,7 +18,16 @@
         <h2>RGB-kleurmodellen</h2>
 <p>Het RGB-kleursysteem is een kleurcodering, een manier om een kleur uit te drukken met behulp van een combinatie van de drie primaire kleuren Rood-Groen-Blauw, uitgaande van additieve kleurmenging.
    De hoeveelheid van elke primaire kleur die benodigd is om de mengkleur te verkrijgen, wordt uitgedrukt in een getal dat meestal uit 8 bits bestaat en kan variëren tussen 0 en 255. </p>
-    </article>
+    
+  <h2>Verschillende kleuren in het RGB-kleurmodel</h2>
+  <p>Als je bijvoorbeeld de achtergrondkleur Honeydew wilt instellen. Moet je deze kleurencombinatie gebruiken: (240,255,240). </p>
+
+
+</article>
+
+
+
+
   
   <img src="kleurmodellenplaatje.png">
 </body>
