--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -20,7 +20,10 @@
    De hoeveelheid van elke primaire kleur die benodigd is om de mengkleur te verkrijgen, wordt uitgedrukt in een getal dat meestal uit 8 bits bestaat en kan variëren tussen 0 en 255. </p>
     
   <h2>Verschillende kleuren in het RGB-kleurmodel</h2>
-  <p>Als je bijvoorbeeld de achtergrondkleur Honeydew wilt instellen. Moet je deze kleurencombinatie gebruiken: (240,255,240). Dit komt neer op 240 keer rood 255 keer groen en 240 keer blauw. </p>
+  <p>Als je bijvoorbeeld de achtergrondkleur Honeydew wilt instellen. Moet je deze kleurencombinatie gebruiken: (240,255,240). 
+    Dit komt neer op 240 keer rood 255 keer groen en 240 keer blauw. 
+    Ook als je bijvoorbeeld onze achtergrondkleur van de homepagina wilt gebruiken "paleturquoise " dan gebruik je de leurencombinatie (175,238,238) in dit geval is dat 175 keer de kleur rood, 238 keer de keur groen en ook 238 keer de kleur blauw.
+  </p>
 
 
 </article>
