--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </ul>
 <article>
   <h2>Inleiding</h2>
-    <p>Goedemorgen dames en heertjes. Welkom op deze website. Vandaag gaan wij jullie iets vertellen over het binair stelsel en kleurmodellen.
+    <p>Goedemorgen dames en heertjes. Welkom op onze website. Vandaag gaan wij jullie iets vertellen over het binair stelsel en kleurmodellen.
     Ik vind het wel bijzonder dat jij op deze site terecht bent gekomen, want waarom zou je in je vrije tijd deze website bekijken.
     Als je nog steeds geinteresseerd bent veel plezier dan met het bezoeken van de website. (klik op een van de links om daarvan informatie te krijgen)</p>
 </article>
