--- a/index.html
+++ b/index.html
@@ -6,14 +6,19 @@
     <link rel="stylesheet" href="opmaak.css"> <!--link naar css bestand-->
     <meta charset="utf-8">
   </head>
+ 
+  <body id="body1">
+   <ul>
+
   <body id="body1"> <!--achtergrondkleur body1 css-->
     <ul> <!--unorderd list-->
+ 
       <li><a href="index.html">Home</a> <!--link terug naar de homepage--></li>
       <li><a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar binair stelsel--></li> 
       <li><a href="kleurmodellen.html">Kleurmodellen</a> <!--link terug naar kleumodellen--></li>
     </ul>
 <article> <!--begin van een artikel-->
-  <h2>Inleiding</h2> <!--tussenkopje-->
+           <h2>Informaticawebsite Jordi en Justin</h2> <!--tussenkopje-->
     <p>Goedemorgen dames en heertjes. Welkom op deze website. Vandaag gaan wij jullie iets vertellen over het binair stelsel en kleurmodellen.
     Ik vind het wel bijzonder dat jij op deze site terecht bent gekomen, want waarom zou je in je vrije tijd deze website bekijken.
     Als je nog steeds geïnterseert bent veel plezier dan met het bezoeken van de website. (klik op een van de links om daarvan informatie te krijgen)</p> <!--tekst bij het tussenkopje-->
