--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html> <!--dit is de homepage van mijn site-->
 <html> <!--dit is het html-element-->
   <head>
-    <title>Het eerste begin</title> <!--dit is de titel van de website-->
+    <title>Het eerste begin</title> <!--dit is de titel van de index-->
     <link rel="stylesheet" href="opmaak.css"> <!--link naar css bestand-->
     <meta charset="utf-8">
   </head>
