--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <li><a href="kleurmodellen.html">Kleurmodellen</a> <!--link terug naar kleumodellen--></li>
     </ul>
 <article> 
-<h2>Inleiding</h2> 
+<h2>Website Jordi en Justin</h2> 
     <p>Goedemorgen dames en heertjes. Welkom op deze website. Vandaag gaan wij jullie iets vertellen over het binair stelsel en kleurmodellen.
     Ik vind het wel bijzonder dat jij op deze site terecht bent gekomen, want waarom zou je in je vrije tijd deze website bekijken.
     Als je nog steeds geïnterseert bent veel plezier dan met het bezoeken van de website. (klik op een van de links om daarvan informatie te krijgen)</p> 
