--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -23,7 +23,7 @@
   <p>Als je bijvoorbeeld de achtergrondkleur Honeydew wilt instellen. Moet je deze kleurencombinatie gebruiken: (240,255,240). 
     Dit komt neer op 240 keer rood 255 keer groen en 240 keer blauw. 
     Ook als je bijvoorbeeld onze achtergrondkleur van de homepagina wilt gebruiken "paleturquoise " dan gebruik je de leurencombinatie (175,238,238) in dit geval is dat 175 keer de kleur rood, 238 keer de keur groen en ook 238 keer de kleur blauw.
-    Zo kun je dus verschillende achtergrond k;euren maken doormiddel van het RGB-kleurmodel.
+    Zo kun je dus verschillende achtergrond kleuren maken doormiddel van het RGB-kleurmodel.
   </p>
 
 
