--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <meta charset="utf-8">
   </head>
  
-  <body id="body1">
-   <ul>
 
   <body id="body1"> <!--achtergrondkleur body1 css-->
     <ul> <!--unorderd list-->
@@ -18,11 +16,12 @@
       <li><a href="kleurmodellen.html">Kleurmodellen</a> <!--link terug naar kleumodellen--></li>
     </ul>
 
-<article>
-  <h2>Website Jordi en Justin</h2> 
+    <article> <!--begin artikel-->
+  <h2>Website Jordi en Justin</h2> <!--tussenkopje-->
   <p>Goedemorgen dames en heertjes. Welkom op deze website. Vandaag gaan wij jullie iets vertellen over het binair stelsel en kleurmodellen.
       Ik vind het wel bijzonder dat jij op deze site terecht bent gekomen, want waarom zou je in je vrije tijd deze website bekijken.
-      Als je nog steeds geïnterseert bent veel plezier dan met het bezoeken van de website. (klik op een van de links om daarvan informatie te krijgen)</p>
-      </article>
+      Als je nog steeds geïnterseert bent veel plezier dan met het bezoeken van de website. (klik op een van de links om daarvan informatie te krijgen)
+  </p><!--tekst bij tussenkopje Website Jordi en Justin-->
+    </article> <!--eind artikel-->
   </body>
 </html>
