--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -1,38 +1,38 @@
-<!DOCTYPE html> <!--dit is de homepage van mijn site-->
+<!DOCTYPE html> <!--dit is de pagina over kleurmodellen van de site-->
 <html> <!--dit is het html-element-->
 <head>
-    <title>Kleurmodellen</title>
-    <link rel="stylesheet" href="opmaak.css">
+    <title>Kleurmodellen</title> <!--dit is de title van de pagina kleurmodellen-->
+    <link rel="stylesheet" href="opmaak.css"> <!--link naar css-->
     <meta charset="utf-8">
 </head>
   <body>
-    <ul> 
+    <ul> <!--unorderd list-->
       <li><a href="index.html">Home</a> <!--link terug naar de homepage--></li>
-      <li><a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar de homepage--></li> 
-      <li><a href="kleurmodellen.html">Kleurmodellen</a> <!--link terug naar de homepage--></li>
+      <li><a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar pagina over binair stelsel--></li> 
+      <li><a href="kleurmodellen.html">Kleurmodellen</a> <!--link terug naar pagina over kleurmodellen--></li>
       </ul> 
-    <h1>Uitleg Kleurmodellen</h1>
+    <h1>Uitleg Kleurmodellen</h1> <!--hoofdkopje van tekstgedeelte-->
 
     
-    <article>
-     <h2>RGB-kleurmodellen</h2>
-<p>Het RGB-kleursysteem is een kleurcodering, een manier om een kleur uit te drukken met behulp van een combinatie van de drie primaire kleuren Rood-Groen-Blauw, uitgaande van additieve kleurmenging.
-   De hoeveelheid van elke primaire kleur die benodigd is om de mengkleur te verkrijgen, wordt uitgedrukt in een getal dat meestal uit 8 bits bestaat en kan variëren tussen 0 en 255. </p>
+    <article> <!--begin artikel-->
+     <h2>RGB-kleurmodellen</h2> <!--tusseenkopje-->
+  <p>Het RGB-kleursysteem is een kleurcodering, een manier om een kleur uit te drukken met behulp van een combinatie van de drie primaire kleuren Rood-Groen-Blauw, uitgaande van additieve kleurmenging.
+   De hoeveelheid van elke primaire kleur die benodigd is om de mengkleur te verkrijgen, wordt uitgedrukt in een getal dat meestal uit 8 bits bestaat en kan variëren tussen 0 en 255. 
+  </p> <!--tekst bij tussenkopje RGB-kleurmodellen-->
     
-  <h2>Verschillende kleuren in het RGB-kleurmodel</h2>
+  <h2>Verschillende kleuren in het RGB-kleurmodel</h2> <!--tussenkopje-->
   <p>Als je bijvoorbeeld de achtergrondkleur Honeydew wilt instellen. Moet je deze kleurencombinatie gebruiken: (240,255,240). 
     Dit komt neer op 240 keer rood 255 keer groen en 240 keer blauw. 
     Ook als je bijvoorbeeld onze achtergrondkleur van de homepagina wilt gebruiken "paleturquoise " dan gebruik je de leurencombinatie (175,238,238) in dit geval is dat 175 keer de kleur rood, 238 keer de keur groen en ook 238 keer de kleur blauw.
-    Zo kun je dus verschillende achtergrond kleuren maken doormiddel van het RGB-kleurmodel.
-  </p>
+    Zo kun je dus verschillende achtergrond k;euren maken doormiddel van het RGB-kleurmodel.
+  </p> <!--tekst bij het tussenkopje verschillende kleuren in het RGB-kleurenmodel-->
 
-
-</article>
+    </article> <!--einde artikel-->
 
 
 
 
   
-  <img src="kleurmodellenplaatje.png">
+  <img src="kleurmodellenplaatje.png"> <!--plaatje over kleurmodellen-->
 </body>
   </html>
