--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
       Ik vind het wel bijzonder dat jij op deze site terecht bent gekomen, want waarom zou je in je vrije tijd deze website bekijken.
       Als je nog steeds geïnterseert bent veel plezier dan met het bezoeken van de website. (klik op een van de links om daarvan informatie te krijgen)</p>
 </article>
-  </body>
+
+<img src="Hallo.PNG"> <!--plaatje voor index-->
 </html>
