--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -27,10 +27,14 @@
     </article> <!--eind artikel-->
 
   <a href="https://games.penjee.com/binary-bonanza/"> <!--link naar binary bonanza-->
-<img src="BinaryBonanza.PNG" alt="Speel BB" style="width:550px;height:550px"> <!--plaatje van binary bonanza-->
+    <img src="BinaryBonanza.PNG" alt="Speel BB" style="width:550px;height:550px"> <!--plaatje van binary bonanza-->
   </a>
 
   <img src="Binair plaatje.jpg"> <!--plaatje over binaire code-->
+
+  <a href="https://www.youtube.com/watch?v=TeQH_Bei8iU"> <!--link naar filpmje over binair rekenen-->
+    <img src="Biniarrekenen.PNG"> <!--plaatje van filmpje over binair rekenen-->
+  </a>
 
 </body>
 </html>
