--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -33,7 +33,7 @@
   <img src="Binair plaatje.jpg"> <!--plaatje over binaire code-->
 
   <a href="https://www.youtube.com/watch?v=TeQH_Bei8iU"> <!--link naar filpmje over binair rekenen-->
-    <img src="Biniarrekenen.PNG"> <!--plaatje van filmpje over binair rekenen-->
+    <img src="Binairrekenen.PNG"> <!--plaatje van filmpje over binair rekenen-->
   </a>
 
 </body>
