--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -30,7 +30,9 @@
     </article> <!--einde artikel-->
 
 
-
+    <a href="https://www.youtube.com/watch?v=a3GwNkUABM4"> <!--link naar filpmje over RGB-kleurmodel-->
+      <img src="KleurmodellenFilmpje.PNG"> <!--plaatje van filmpje over RGB-->
+    </a>
 
   
   <img src="kleurmodellenplaatje.png"> <!--plaatje over kleurmodellen-->
