--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -30,8 +30,8 @@
     </article> <!--einde artikel-->
 
 
-    <a href="https://www.youtube.com/watch?v=a3GwNkUABM4"> <!--link naar filpmje over RGB-kleurmodel-->
-      <img src="KleurmodellenFilmpje.PNG"> <!--plaatje van filmpje over RGB-->
+    <a href="https://www.youtube.com/watch?v=YtH9eXWuf3Y"> <!--link naar filpmje over RGB-kleurmodel en CMYK-model-->
+      <img src="FilmpjeKleuren.PNG"> <!--plaatje van filmpje over RGB en CMYK-->
     </a>
 
   
