--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -20,6 +20,9 @@
    De hoeveelheid van elke primaire kleur die benodigd is om de mengkleur te verkrijgen, wordt uitgedrukt in een getal dat meestal uit 8 bits bestaat en kan variëren tussen 0 en 255. 
   </p> <!--tekst bij tussenkopje RGB-kleurmodellen-->
     
+  <h2>het Cmy-kleurmodel</h2> 
+  <p>Het Cmy-kleursysteem is een kleursysteem wat zorgt voor de kleurcodering tussen de kleuren cyan, magenta en yellow ( in het nederlands lichtblauw, magenta en geel). Dit kleursysteem werkt voor de rest hetzelfde als het RGB-kleursysteem dus hier bepaald ook het aantal </p>
+  
   <h2>Verschillende kleuren in het RGB-kleurmodel</h2> <!--tussenkopje-->
   <p>Als je bijvoorbeeld de achtergrondkleur Honeydew wilt instellen. Moet je deze kleurencombinatie gebruiken: (240,255,240). 
     Dit komt neer op 240 keer rood 255 keer groen en 240 keer blauw. 
