--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -10,6 +10,7 @@
       <li><a href="index.html">Home</a> <!--link terug naar de homepage--></li>
       <li><a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar pagina over binair stelsel--></li> 
       <li><a href="kleurmodellen.html">Kleurmodellen</a> <!--link terug naar paigina over kleumodellen--></li>
+      <li><a href="Bitmap.html">Bitmap</a> <!--link terug naar de pagina over bitmap--></li>
     </ul> 
     <h1>Uitleg binaire stelsel</h1> <!--hoofdkopje van tekstgedeelte-->
     
