--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -10,7 +10,8 @@
       <li><a href="index.html">Home</a> <!--link terug naar de homepage--></li>
       <li><a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar pagina over binair stelsel--></li> 
       <li><a href="kleurmodellen.html">Kleurmodellen</a> <!--link terug naar pagina over kleurmodellen--></li>
-      </ul> 
+      <li><a href="Bitmap.html">Bitmap</a> <!--link terug naar de pagina over bitmap--></li>
+    </ul> 
     <h1>Uitleg Kleurmodellen</h1> <!--hoofdkopje van tekstgedeelte-->
 
     
