--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <li><a href="index.html">Home</a> <!--link terug naar de homepage--></li>
       <li><a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar binair stelsel--></li> 
       <li><a href="kleurmodellen.html">Kleurmodellen</a> <!--link terug naar kleumodellen--></li>
+      <li><a href="Bitmap.html">Bitmap</a> <!--link terug naar de pagina over bitmap--></li>
     </ul>
 
 <article> <!--begin artikel-->
