--- a/Bitmap.html
+++ b/Bitmap.html
@@ -26,7 +26,9 @@
     </p> <!--tekst bij kopje binaire code-->
     </article> <!--eind artikel-->
 
-  
+    <a href="https://www.youtube.com/watch?v=1JZG9x_VOwA"> <!--link naar filpmje over geluid opvangen-->
+        <img src="Bitmap.PNG"> <!--plaatje van filmpje over binair rekenen-->
+      </a> 
 
 </body>
 </html>
