--- a/Bitmap.html
+++ b/Bitmap.html
@@ -13,7 +13,7 @@
       <li><a href="Bitmap.html">Bitmap</a> <!--link terug naar de pagina over bitmap--></li>
     </ul> 
     
-    <h1></h1> <!--hoofdkopje van tekstgedeelte-->
+    <h1>Bitmaps en vectorafbeeldingen</h1> <!--hoofdkopje van tekstgedeelte-->
     
     <article> <!--begin artikel-->
     <h2></h2> <!--tussenkopje-->
