--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -28,7 +28,7 @@
     </article> <!--eind artikel-->
 
   <a href="https://games.penjee.com/binary-bonanza/"> <!--link naar binary bonanza-->
-    <img src="BinaryBonanza.PNG" alt="Speel BB" style="width:550px;height:550px"> <!--plaatje van binary bonanza-->
+    <img src="BinaryBonanza.PNG" style="width:550px;height:550px"> <!--plaatje van binary bonanza-->
   </a>
 
   <img src="Binair plaatje.jpg"> <!--plaatje over binaire code-->
