--- a/Bitmap.html
+++ b/Bitmap.html
@@ -16,8 +16,10 @@
     <h1>Bitmaps en vectorafbeeldingen</h1> <!--hoofdkopje van tekstgedeelte-->
     
     <article> <!--begin artikel-->
-    <h2></h2> <!--tussenkopje-->
-    <p>
+    <h2>Bitmap</h2> <!--tussenkopje-->
+    <p> Bij computergebruik is een bitmap een afbeelding van een bepaald domein naar bits.
+      Een bitmap is een type geheugenoorganistaie die wordt gebruikt om afbeeldingen op te slaan.
+      De term bitmap komt uit de terminologie van computerprogrammering en dat betekent dat het slechts een kaart van bits is.
       
     </p> <!--tekst bij kopje geschiedenis-->
   
