--- a/Bitmap.html
+++ b/Bitmap.html
@@ -20,8 +20,7 @@
     <p> Bij computergebruik is een bitmap een afbeelding van een bepaald domein naar bits.
       Een bitmap is een type geheugenoorganistaie die wordt gebruikt om afbeeldingen op te slaan.
       De term bitmap komt uit de terminologie van computerprogrammering en dat betekent dat het slechts een kaart van bits is.
-      
-    </p> <!--tekst bij kopje geschiedenis-->
+    </p> <!--tekst bij kopje bitmap-->
   
     <h2></h2> <!--tussenkopje-->
     <p>
@@ -29,7 +28,7 @@
     </article> <!--eind artikel-->
 
     <a href="https://www.youtube.com/watch?v=1JZG9x_VOwA"> <!--link naar filpmje over geluid opvangen-->
-        <img src="Bitmap.PNG">style="width:550px;height:550px" <!--plaatje van filmpje over binair rekenen-->
+        <img src="Bitmap.PNG"> <!--plaatje van filmpje over binair rekenen-->
       </a> 
 
 </body>
