--- a/Bitmap.html
+++ b/Bitmap.html
@@ -21,10 +21,11 @@
       Een bitmap is een type geheugenoorganistaie die wordt gebruikt om afbeeldingen op te slaan.
       De term bitmap komt uit de terminologie van computerprogrammering en dat betekent dat het slechts een kaart van bits is.
     </p> <!--tekst bij kopje bitmap-->
+
   
-    <h2></h2> <!--tussenkopje-->
+    <h2>Vectorafbeeldingen</h2> <!--tussenkopje-->
     <p>
-    </p> <!--tekst bij kopje binaire code-->
+    </p> <!--tekst bij kopje Vectorafbeeldingen-->
     </article> <!--eind artikel-->
 
     <a href="https://www.youtube.com/watch?v=1JZG9x_VOwA"> <!--link naar filpmje over geluid opvangen-->
