--- a/Bitmap.html
+++ b/Bitmap.html
@@ -24,7 +24,9 @@
 
   
     <h2>Vectorafbeeldingen</h2> <!--tussenkopje-->
-    <p>
+    <p> Een vectorafbeeldingen is een grafische voorstelling die opgebouwd is uit meetkundige objecten, zoals: punten, lijnen etc.
+      De iets lastigere vormen kun je maken door een combinatie te maken van de basisvormen. De afbeelding wordt beschreven door de formules van de objecten.
+      Hierdoor kun je zelf de perfecte groote voor jou vectorafbeeldingen maken zonder kwaliteitsverlies. Dit is dan bijvoorbeeld anders dan een bitmapafbeelding.
     </p> <!--tekst bij kopje Vectorafbeeldingen-->
     </article> <!--eind artikel-->
 
