--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 <article> <!--begin artikel-->
   <h2>Website Jordi en Justin</h2> <!--tussenkopje-->
-  <p>Goedemorgen dames en heertjes. Welkom op deze website. Vandaag gaan wij jullie iets vertellen over het binair stelsel en kleurmodellen.
+  <p>Goedemorgen dames en heertjes. Welkom op deze website. Vandaag gaan wij jullie iets vertellen over het binair stelsel, kleurmodellen en bitmaps.
       Ik vind het wel bijzonder dat jij op deze site terecht bent gekomen, want waarom zou je in je vrije tijd deze website bekijken.
-      Als je nog steeds geïnteresseerd bent veel plezier dan met het bezoeken van de website. (klik op een van de links om daarvan informatie te krijgen)</p>
+      Als je nog steeds geïnteresseerd bent veel plezier dan met het bezoeken van de website. (klik op een van de blokjes bij de inhoudsopgave om daarvan informatie te krijgen)</p>
 </article>
 
 <img src="Hallo.PNG"> <!--plaatje voor index-->
