--- a/Bitmap.html
+++ b/Bitmap.html
@@ -28,7 +28,13 @@
       De iets lastigere vormen kun je maken door een combinatie te maken van de basisvormen. De afbeelding wordt beschreven door de formules van de objecten.
       Hierdoor kun je zelf de perfecte groote voor jou vectorafbeeldingen maken zonder kwaliteitsverlies. Dit is dan bijvoorbeeld anders dan een bitmapafbeelding.
     </p> <!--tekst bij kopje Vectorafbeeldingen-->
-    </article> <!--eind artikel-->
+  
+    <h2>Mobiele signalen</h2>
+    <p></p>
+      
+  
+  
+  </article> <!--eind artikel-->
 
     <a href="https://www.youtube.com/watch?v=1JZG9x_VOwA"> <!--link naar filpmje over geluid opvangen-->
         <img src="Bitmap.PNG" style="width:350px;height:250px"><!--plaatje van filmpje over binair rekenen-->
