--- a/Bitmap.html
+++ b/Bitmap.html
@@ -30,7 +30,11 @@
     </p> <!--tekst bij kopje Vectorafbeeldingen-->
   
     <h2>Mobiele signalen</h2>
-    <p></p>
+    <p>In je telefoon zit een microfoontje. De microfoon bestaat uit een dun vlies dat op zijn plek gehouden wordt door. 
+      Zodra de geluidsgolf het vlies in beweging brengt bewegen de magneetjes mee. Het patroon van de bewegende magneetjes wordt omgezet in elektrische energie.
+      Dit signaal gaat via een kabel naar de ontvanger. In een mobiele telefoon wordt het elektrische signaal omgezet in radiogolven.
+      De dichtsbijzijnde zendmast pikt ze op en verspreidt ze verder via het netwerk.
+    </p>
       
   
   
