--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -23,7 +23,8 @@
     
   <h2>het Cmy-kleurmodel</h2> 
   <p>Het Cmy-kleursysteem is een kleursysteem wat zorgt voor de kleurcodering tussen de kleuren cyan, magenta en yellow (in het nederlands lichtblauw, magenta en geel).
-   Dit is een systeem om met 3 basiskleur doormiddel van kleurmenging een groot aantal andere kleur te krijgen. Een paar voorbeelden van deze kleuren zijn: rood, groen en donkerblauw. </p>
+   Dit is een systeem om met 3 basiskleur doormiddel van kleurmenging een groot aantal andere kleur te krijgen. Een paar voorbeelden van deze kleuren zijn: rood, groen en donkerblauw.
+  </p>
   
   <h2>Verschillende kleuren in het RGB-kleurmodel</h2> <!--tussenkopje-->
   <p>Als je bijvoorbeeld de achtergrondkleur Honeydew wilt instellen. Moet je deze kleurencombinatie gebruiken: (240,255,240). 
