--- a/index.html
+++ b/index.html
@@ -26,4 +26,7 @@
 </article>
 
 <img src="Hallo.PNG"> <!--plaatje voor index-->
+
+<img scr="plaatjehomepage.PNG"> <!--plaatje voor index-->
+
 </html>
