--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
 
 <img src="Hallo.PNG"> <!--plaatje voor index-->
 
-<img src="plaatjehomepage.PNG"> <!--plaatje voor index-->
+<img id="afb1" src="plaatjehomepage.PNG"> <!--plaatje voor index-->
 
 </html>
