--- a/Bitmap.html
+++ b/Bitmap.html
@@ -41,8 +41,10 @@
     </article> <!--eind artikel-->
 
     <a href="https://www.youtube.com/watch?v=1JZG9x_VOwA"> <!--link naar filpmje over geluid opvangen-->
-        <img src="Bitmap.PNG" style="width:350px;height:250px"><!--plaatje van filmpje over binair rekenen-->
+        <img src="Bitmap.PNG" style="width:350px;height:250px"> <!--plaatje van filmpje over binair rekenen-->
     </a> 
+
+  <img src="Bitmapafb.PNG"> <!--plaatje bitmap-->
 
   </body>
 </html>
