--- a/Bitmap.html
+++ b/Bitmap.html
@@ -11,6 +11,7 @@
       <li><a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar pagina over binair stelsel--></li> 
       <li><a href="kleurmodellen.html">Kleurmodellen</a> <!--link terug naar paigina over kleumodellen--></li>
       <li><a href="Bitmap.html">Bitmap</a> <!--link terug naar de pagina over bitmap--></li>
+      <li><a href="3-lagenmodel.html">3-lagenmodel</a> <!--link naar de pagina over het 3-lagemodel--></li>
     </ul> 
     
     <h1>Bitmap, vectorafbeeldingen en mobiele signalen</h1> <!--hoofdkopje van tekstgedeelte-->
