--- a/3-lagenmodel.html
+++ b/3-lagenmodel.html
@@ -15,3 +15,7 @@
     </ul> 
 
     <h1>Uitleg 3-lagenmodel</h1> <!--hoofdkopje van tekstgedeelte-->
+
+    <article> <!--begin artikel-->
+      <h2>algemene informatie</h2> <!--tussenkopje-->
+      <p></p> <!--tekst bij kopje geschiedenis-->
