--- a/3-lagenmodel.html
+++ b/3-lagenmodel.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <!--dit is de binair stelsel pagina van de site-->
+<!DOCTYPE html> <!--dit is de 3-lagenmodel pagina van de site-->
 <html> <!--dit is het html-element-->
   <head>
     <title>3-lagenmodel</title> <!--dit is de titel van de pagina over 3-lagemodel-->
@@ -17,5 +17,21 @@
     <h1>Uitleg 3-lagenmodel</h1> <!--hoofdkopje van tekstgedeelte-->
 
     <article> <!--begin artikel-->
-      <h2>algemene informatie</h2> <!--tussenkopje-->
-      <p></p> <!--tekst bij kopje geschiedenis-->
+      <h2>Fysieke laag</h2> <!--tussenkopje-->
+        <h3>Processor</h3>
+      <p></p> <!--tekst bij kopje -->
+        <h3>Werkgeheugen</h3>
+      <p></p>
+        <h3>Moederbord</h3>
+      <p></p>
+
+      <h2>logische laag</h2>
+        <h3>Besturingssysteem</h3>
+      <p></p>
+        <h3>Rol van de logische laag</h3>
+
+      <h2>Toepassingslaag</h2>
+        <h3>Toepassingsprogramma's</h3>
+      <p></p>
+        <h3>API's</h3>
+      <p></p>
