--- a/3-lagenmodel.html
+++ b/3-lagenmodel.html
@@ -42,4 +42,17 @@
       <h2>Toepassingslaag</h2>
         <p>De toepassingenlaag is de bovenste laag van het model en omvat de softwaretoepassingen die door gebruikers worden gebruikt. Dit omvat:
           Toepassingsprogramma's: Toepassingsprogramma's zijn softwaretoepassingen die specifieke functies bieden, zoals tekstverwerking, grafisch ontwerp, webbrowsing en meer.          
-          Databases: Databases zijn gegevensopslagsystemen die worden gebruikt voor het opslaan, beheren en ophalen van gestructureerde informatie.</p>
+    
+      <h2>Verdieping operating system</h2>
+        <p> De taken van een operating system zijn:
+          Berekeningen maken: De processor voert wiskundige en logische berekeningen uit, zoals optellen en vergelijken. Dit helpt bij het uitvoeren van taken en het maken van beslissingen.
+          Gegevens beheren: Het slaat gegevens op en haalt ze op uit het geheugen (zoals RAM), wat nodig is voor programma's om te werken.
+          Instructies volgen: Het leest en begrijpt instructies van programma's en voert ze in de juiste volgorde uit.
+          Problemen oplossen: Het kan problemen detecteren en ermee omgaan, zoals fouten of speciale verzoeken van apparaten.
+          Snel werken: Moderne processors zijn erg snel en kunnen meerdere taken tegelijkertijd uitvoeren, wat computers snel maakt.
+          Kortom, een processor is als de "hersenen" van een computer. Het voert berekeningen uit, beheert gegevens en zorgt ervoor dat programma's correct werken.</p>
+        </article>   
+
+  </body>
+  </html>
+          
