--- a/3-lagenmodel.html
+++ b/3-lagenmodel.html
@@ -17,7 +17,7 @@
     <h1>Uitleg 3-lagenmodel</h1> <!--hoofdkopje van tekstgedeelte-->
 
     <article> <!--begin artikel-->
-      <h2>algemene informatie over 3-lagenmodel</h2>
+      <h2>Algemene informatie over 3-lagenmodel</h2>
         <p>Het 3-lagenmodel is een conceptueel model dat vaak wordt gebruikt om de architectuur 
           van computersystemen en netwerken te begrijpen. Dit model verdeelt de functionaliteit 
           van een systeem in drie hoofdlagen: de fysieke laag, de logische laag en de toepassingenlaag. </p>
