--- a/3-lagenmodel.html
+++ b/3-lagenmodel.html
@@ -53,7 +53,7 @@
           Kortom, een processor is als de "hersenen" van een computer. Het voert berekeningen uit, beheert gegevens en zorgt ervoor dat programma's correct werken.</p>
         </article>   
 
-        <img src="3lagenmodel.PNG">
+        <img src="3lagenmodel.PNG" style="width:550px;height:550px">
 
   </body>
   </html>
