--- a/3-lagenmodel.html
+++ b/3-lagenmodel.html
@@ -40,8 +40,12 @@
           Talen/compilers: Talen worden gebruikt om software te schrijven, en compilers vertalen deze programmeertalen naar machinetaal die de computer begrijpt.</p>
 
       <h2>Toepassingslaag</h2>
-        <p>De toepassingenlaag is de bovenste laag van het model en omvat de softwaretoepassingen die door gebruikers worden gebruikt. Dit omvat:
-          Toepassingsprogramma's: Toepassingsprogramma's zijn softwaretoepassingen die specifieke functies bieden, zoals tekstverwerking, grafisch ontwerp, webbrowsing en meer.          
+        <p>De toepassingslaag in het 3-lagenmodel verwijst naar het deel van een computernetwerk dat verantwoordelijk is voor de communicatie tussen verschillende programma's en apps op verschillende apparaten.
+          Hier zijn enkele belangrijke punten:
+          Doel: De toepassingslaag zorgt ervoor dat programma's op verschillende apparaten met elkaar kunnen praten. Denk aan het verzenden van e-mails, het surfen op internet, of het delen van bestanden.         
+          Voorbeelden: Dit omvat programma's die je dagelijks gebruikt, zoals webbrowsers, e-mailclients (zoals Outlook of Gmail), en apps voor bestandsoverdracht.         
+          Protocollen: Het maakt gebruik van speciale regels en protocollen om ervoor te zorgen dat de communicatie soepel verloopt. Bijvoorbeeld, HTTP voor websites, SMTP voor e-mails, en FTP voor bestandsoverdracht.         
+          Beveiliging: Het is ook verantwoordelijk voor het beveiligen van de communicatie, zoals het versleutelen van gegevens om ervoor te zorgen dat alleen de bedoelde ontvanger ze kan lezen</p>          
     
       <h2>Verdieping operating system</h2>
         <p> De taken van een operating system zijn:
