--- a/3-lagenmodel.html
+++ b/3-lagenmodel.html
@@ -6,14 +6,22 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <ul> <!--unorderd list-->
-      <li><a href="index.html">Home</a> <!--link terug naar de homepage--></li>
-      <li><a href="binairstelsel.html">Binair stelsel</a> <!--link terug naar pagina over binair stelsel--></li> 
-      <li><a href="kleurmodellen.html">Kleurmodellen</a> <!--link terug naar paigina over kleumodellen--></li>
-      <li><a href="Bitmap.html">Bitmap</a> <!--link terug naar de pagina over bitmap--></li>
-      <li><a href="3-lagenmodel.html">3-lagenmodel</a> <!--link naar de pagina over het 3-lagemodel--></li>
-    </ul> 
-
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="binairstelsel.html">Binair stelsel</a></li>
+      <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
+      <li><a href="Bitmap.html">Bitmap</a></li>
+      <li class="dropdown">
+          <a href="3-lagenmodel.html" class="dropbtn">3-lagenmodel</a>
+          <div class="dropdown-content">
+              <a href="#">Toepassingslaag</a>
+              <a href="#">Transportlaag</a>
+              <a href="#">Netwerklaag</a>
+          </div>
+      </li>
+    </ul>
+  
+  
     <h1>Uitleg 3-lagenmodel</h1> <!--hoofdkopje van tekstgedeelte-->
 
     <article> <!--begin artikel-->
