--- a/3-lagenmodel.html
+++ b/3-lagenmodel.html
@@ -14,9 +14,9 @@
       <li class="dropdown">
           <a href="3-lagenmodel.html" class="dropbtn">3-lagenmodel</a>
           <div class="dropdown-content">
+              <a href="#">Fysieke laag</a>
+              <a href="#">Logische laag</a>
               <a href="#">Toepassingslaag</a>
-              <a href="#">Transportlaag</a>
-              <a href="#">Netwerklaag</a>
           </div>
       </li>
     </ul>
