--- a/Logischelaag.html
+++ b/Logischelaag.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html> <!--dit is de 3-lagenmodel pagina van de site-->
+<html> <!--dit is het html-element-->
+  <head>
+    <title>Fysieke laag</title> <!--dit is de titel van de pagina-->
+    <link rel="stylesheet" href="opmaak.css"> <!--link naar css-->
+    <meta charset="utf-8">
+  </head>
+  <body>
 
+    <h2>Logische laag</h2>
+    <p>De logische laag bevindt zich boven de fysieke laag en omvat het besturingssysteem, dat essentieel is voor de coördinatie en beheer van hardwarebronnen en softwareprocessen. Andere begrippen in deze laag zijn:
+      Operating System (besturingssysteem): Het besturingssysteem is verantwoordelijk voor taken zoals het beheren van geheugen, het plannen van processen en het bieden van een gebruikersinterface.
+      Talen/compilers: Talen worden gebruikt om software te schrijven, en compilers vertalen deze programmeertalen naar machinetaal die de computer begrijpt.</p>
+
+  </body>
+  </html> 
