--- a/Toepassingslaag.html
+++ b/Toepassingslaag.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html> <!--dit is de 3-lagenmodel pagina van de site-->
+<html> <!--dit is het html-element-->
+  <head>
+    <title>Fysieke laag</title> <!--dit is de titel van de pagina-->
+    <link rel="stylesheet" href="opmaak.css"> <!--link naar css-->
+    <meta charset="utf-8">
+  </head>
+  <body>
 
+    <h2>Toepassingslaag</h2>
+    <p>De toepassingslaag in het 3-lagenmodel verwijst naar het deel van een computernetwerk dat verantwoordelijk is voor de communicatie tussen verschillende programma's en apps op verschillende apparaten.
+      Hier zijn enkele belangrijke punten:
+      Doel: De toepassingslaag zorgt ervoor dat programma's op verschillende apparaten met elkaar kunnen praten. Denk aan het verzenden van e-mails, het surfen op internet, of het delen van bestanden.         
+      Voorbeelden: Dit omvat programma's die je dagelijks gebruikt, zoals webbrowsers, e-mailclients (zoals Outlook of Gmail), en apps voor bestandsoverdracht.         
+      Protocollen: Het maakt gebruik van speciale regels en protocollen om ervoor te zorgen dat de communicatie soepel verloopt. Bijvoorbeeld, HTTP voor websites, SMTP voor e-mails, en FTP voor bestandsoverdracht.         
+      Beveiliging: Het is ook verantwoordelijk voor het beveiligen van de communicatie, zoals het versleutelen van gegevens om ervoor te zorgen dat alleen de bedoelde ontvanger ze kan lezen</p>          
+
+  </body>
+  </html> 
