--- a/Logischelaag.html
+++ b/Logischelaag.html
@@ -10,9 +10,10 @@
     <h2>Logische laag</h2>
     <p>De logische laag bevindt zich boven de fysieke laag en omvat het besturingssysteem, dat essentieel is voor de coördinatie en beheer van hardwarebronnen en softwareprocessen. Andere begrippen in deze laag zijn:
       Operating System (besturingssysteem): Het besturingssysteem is verantwoordelijk voor taken zoals het beheren van geheugen, het plannen van processen en het bieden van een gebruikersinterface.
-      Talen/compilers: Talen worden gebruikt om software te schrijven, en compilers vertalen deze programmeertalen naar machinetaal die de computer begrijpt.
+      Talen/compilers: Talen worden gebruikt om software te schrijven, en compilers vertalen deze programmeertalen naar machinetaal die de computer begrijpt. </p>
      
-      Logische laag (ook wel de netwerklaag genoemd):
+      <h2>Werking van de logische laag</h2>
+      <p>Logische laag (ook wel de netwerklaag genoemd):
 
       Doel:
       De logische laag is verantwoordelijk voor het beheren van de communicatie tussen verschillende apparaten in een computernetwerk. Het biedt een gestandaardiseerde manier om gegevens van het ene apparaat naar het andere te routeren, ongeacht de fysieke verbindingen of topologie van het netwerk.
