--- a/Toepassingslaag.html
+++ b/Toepassingslaag.html
@@ -7,7 +7,12 @@
   </head>
   <body>
 
-    <h2>Toepassingslaag</h2>
+    <h2>Toepsaaingslaag</h2>
+    <p>Toepassingsprogramma's zijn softwaretoepassingen die taken uitvoeren voor gebruikers, zoals webbrowsers en e-mailclients. Databases zijn georganiseerde 
+        verzamelingen van gestructureerde gegevens die worden gebruikt om informatie op te slaan en te beheren. Toepassingsprogramma's kunnen gegevens ophalen, bewerken en opslaan in 
+        databases om specifieke taken uit te voeren.</p>
+
+    <h2>Werking van de Toepassingslaag</h2>
     <p>De toepassingslaag in het 3-lagenmodel verwijst naar het deel van een computernetwerk dat verantwoordelijk is voor de communicatie tussen verschillende programma's en apps op verschillende apparaten.
       Hier zijn enkele belangrijke punten:
       Doel: De toepassingslaag zorgt ervoor dat programma's op verschillende apparaten met elkaar kunnen praten. Denk aan het verzenden van e-mails, het surfen op internet, of het delen van bestanden.         
