--- a/Fysiekelaag.html
+++ b/Fysiekelaag.html
@@ -19,5 +19,7 @@
           Randapparatuur: Randapparatuur zijn externe apparaten die aan de computer worden gekoppeld, zoals toetsenborden, muizen, printers en beeldschermen.
           Verbindingen: kabels/interfaces: De fysieke laag omvat ook de kabels en interfaces waarmee verschillende hardwarecomponenten met elkaar en met externe apparaten worden verbonden.</p>
 
+          <img src="3-lagenmodelPlaatje.PNG" style="width:550px;height:550px">
+
   </body>
   </html> 
