--- a/Logischelaag.html
+++ b/Logischelaag.html
@@ -8,9 +8,10 @@
   <body>
 
     <h2>Logische laag</h2>
-    <p>De logische laag bevindt zich boven de fysieke laag en omvat het besturingssysteem, dat essentieel is voor de coördinatie en beheer van hardwarebronnen en softwareprocessen. Andere begrippen in deze laag zijn:
-      Operating System (besturingssysteem): Het besturingssysteem is verantwoordelijk voor taken zoals het beheren van geheugen, het plannen van processen en het bieden van een gebruikersinterface.
-      Talen/compilers: Talen worden gebruikt om software te schrijven, en compilers vertalen deze programmeertalen naar machinetaal die de computer begrijpt. </p>
+    <p>De logische laag bevindt zich boven de fysieke laag en omvat het besturingssysteem, dat essentieel is voor de coördinatie en beheer van hardwarebronnen en softwareprocessen.</p> 
+    <p>Andere begrippen in deze laag zijn:</p>
+    <p>Operating System (besturingssysteem): Het besturingssysteem is verantwoordelijk voor taken zoals het beheren van geheugen, het plannen van processen en het bieden van een gebruikersinterface.</p>
+     <p>Talen/compilers: Talen worden gebruikt om software te schrijven, en compilers vertalen deze programmeertalen naar machinetaal die de computer begrijpt. </p>
      
       <h2>Werking van de logische laag</h2>
       <p>Logische laag (ook wel de netwerklaag genoemd):
@@ -36,6 +37,7 @@
     </p>
 
     <img src="3-lagenmodelPlaatje.PNG" style="width:300px;height:300px">
+
 
   </body>
   </html> 
