--- a/Toepassingslaag.html
+++ b/Toepassingslaag.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> <!--dit is de 3-lagenmodel pagina van de site-->
 <html> <!--dit is het html-element-->
   <head>
-    <title>Fysieke laag</title> <!--dit is de titel van de pagina-->
+    <title>Toepassingslaag</title> <!--dit is de titel van de pagina-->
     <link rel="stylesheet" href="opmaak.css"> <!--link naar css-->
     <meta charset="utf-8">
   </head>
